# streaming_server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
include/: api_key_manager.hpp  ascii_converter.hpp  ascii_converter_interface.hpp  cloudflare_tunnel.hpp  http_session.hpp  logger.hpp  network_utils.hpp  playback_controller.hpp  record_controller.hpp  server.hpp  stream_controller.hpp  video_source.hpp  video_source_interface.hpp  vk_tunnel.hpp  websocket_session.hpp
src/: api_key_manager.cpp  ascii_converter.cpp  cloudflare_tunnel.cpp  http_session.cpp  logger.cpp  main.cpp  network_utils.cpp  playback_controller.cpp  record_controller.cpp  server.cpp  stream_controller.cpp  video_source.cpp  vk_tunnel.cpp  websocket_session.cpp
tests/: CMakeLists.txt  build.bat  build.sh  test_ascii_converter.cpp  test_video_source.cpp
tests/src/: test_ascii_converter.cpp  test_stream_controller.cpp  test_video_source.cpp  tests_main.cpp
web/: app.js  index.html  recordings.html  recordings.js  stream.html  style.css  tunnel_guide.html
